--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,11 +2,11 @@ FROM golang:1-alpine
 LABEL maintainer="Alexander I.Grafov <grafov@gmail.com>"
 
 RUN apk add --no-cache git \
-  && go get -d -v github.com/grafov/hulk \
-  && go install github.com/grafov/hulk@latest \
-  && rm -rf ~/go/src/github.com/grafov/hulk \
+  && go get -d -v github.com/Monsterlallu/Cyber-kattappa \
+  && go install github.com/Monsterlallu/Cyber-kattappa/hulk@latest \
+  && rm -rf ~/go/src/github.com/Monsterlallu/Cyber-kattappa \
   && apk del git
 
-ENTRYPOINT ["hulk"]
+ENTRYPOINT ["Cyber-kattappa"]
 
 CMD ["--help"]
